package com.project.BookMyShow;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class BookMyShowApplication {
	public static void main(String[] args) {
		SpringApplication.run(BookMyShowApplication.class, args);
	}

}
