package com.project.BookMyShow.Repository;

import org.springframework.data.jpa.repository.JpaRepository;

import com.project.BookMyShow.Entity.City;


public interface CityRepository extends JpaRepository<City, Long> {


    City findByCityName(String cityName);
}
